--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.17.0
-scikit-learn==1.3.0
-joblib==1.3.2
-catboost==1.2
-xgboost==1.7.6
-imbalanced-learn==0.11.0
+streamlit>=1.28.0
+pandas>=2.1.0
+numpy>=1.25.0
+plotly>=5.15.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+catboost>=1.2.0
+xgboost>=2.0.0
+imbalanced-learn>=0.11.0
